Added intership subscription and other improvements

--- a/IntershipTutor/WebContent/style/homepage.css
+++ b/IntershipTutor/WebContent/style/homepage.css
@@ -100,6 +100,12 @@
 }
 /* End collapsible research */
 
+/* Homepage STUDENTE */
+button:hover i.fa-share-square{
+	color: #ffffff
+}
+/* End homepage STUDENTE */
+
 /* Homepage AZIENDA */
 .options button{
 	background-color: #ffffff;
