--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -98,7 +98,7 @@
 					<!-- Login modal -->
 					<div id="login-modal" class="tab">
 						<div class="w3-center"><br>
-							<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+							<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 							<h2 class="w3-margin-bottom">Effettua il login</h2>
 						</div>
 						<form class="w3-container" action="login" method="post">
