--- a/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-anonimo.ftl.html
@@ -16,7 +16,7 @@
 	                        <p class="info">
 	                        	<a href="azienda?azienda=${azienda.codiceFiscale}">
 		                        	<i class="far fa-building fa-fw w3-margin-right"></i> 
-		                        	<b>${azienda.nome}</b>
+		                        	<b class="w3-text-grey">${azienda.nome}</b>
 	                        	</a>
 	                        </p>
 	                        <p class="info">
