--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -30,11 +30,36 @@
 		                <hr class="no-margin" />
 		                <p class="info padding-top-bot pointer">
 		                	<a href="#update-student-modal">
-			                   <i class="far fa-edit fa-fw w3-margin-right w3-text-theme"></i>
+			                   <i class="far fa-edit fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 			                   Modifica Profilo
 		                   </a>
 		                </p>
-		               
+		               	<#if tirocinioRichiesto?? && tirocinioStudente??>
+		               		<h2 id="tirocinio-richiesto" class="w3-center univaq-color">Tirocinio Richiesto</h2>
+	               			<p class="info w3-margin-bottom	w3-margin-top">
+	               				<a href="offertaTirocinio?id_tirocinio=${tirocinioRichiesto.idTirocinio}">
+	               					<b class="w3-text-grey">${tirocinioRichiesto.titolo}</b>
+	               				</a>
+	               			</p>
+		               		<p class="info"><i>Stato richiesta:</i></p>
+		               		<p class="info">
+		               			<#if tirocinioStudente.stato.name() == "accettato">
+		               				<i class="fas fa-check fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+		               			<#elseif tirocinioStudente.stato.name() == "attesa">
+		               				<i class="fas fa-spinner fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+		               			<#else>
+		               				<i class="fas fa-times fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+		               			</#if>
+		               			${tirocinioStudente.stato?capitalize}
+		               		</p>
+		               		<p class="info"><i>Opzioni:</i></p>
+		               		<p class="info pointer">
+		               			<a href="tirocinioStudente?rimuovi=true">
+			               			<i class="far fa-trash-alt fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
+			               			Annulla richiesta
+		               			</a>	
+		               		</p>
+		               	</#if>
 		           </div>
 		       </div>
 	
@@ -47,7 +72,7 @@
 	                    <p class="info">
                         	<a href="azienda?azienda=${azienda.codiceFiscale}">
 	                        	<i class="far fa-building fa-fw w3-margin-right"></i> 
-	                        	<b>${azienda.nome}</b>
+	                        	<b class="w3-text-grey">${azienda.nome}</b>
                         	</a>
                         </p>
                         <p class="info">
@@ -126,12 +151,14 @@
 						        ${offerta.modalita?substring(0,500)}...
 						    </#if>
 						</p>
-						<a href="#intership-subscription-modal-${offerta.idTirocinio}">
-							<button class="w3-button w3-right w3-round">
-								<i class="far fa-share-square fa-fw w3-margin-right w3-hover-univaq-color-background"></i>
-								Invia proposta
-							</button>
-						</a>
+						<#if !tirocinioStudente??>
+							<a href="#intership-subscription-modal-${offerta.idTirocinio}">
+								<button class="w3-button w3-right w3-round">
+									<i class="far fa-share-square fa-fw w3-margin-right w3-hover-univaq-color-background"></i>
+									Invia proposta
+								</button>
+							</a>
+						</#if>
 					 </div>
 				</#list>
 		        
@@ -153,7 +180,7 @@
 	    <div class="w3-card w3-white w3-round popup w3-padding">
 	
 	      <div class="w3-center"><br>
-	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+	      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 	        <h2>Modifica informazioni</h2>
 	      </div>
 		      <form class="w3-container" action="./studente" method="post">
@@ -199,7 +226,7 @@
 	      <div id="intership-subscription-modal-${offerta.idTirocinio}" class="overlay">
 		    <div class="w3-card w3-white w3-round popup w3-padding">
 		      <div class="w3-center"><br>
-		      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
+		      	<a href="#close" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 		        <h2>Inserisci le informazioni</h2>
 		      </div>
 			      <form class="w3-container" action="studente" method="post">
